@@ -1,4 +1,13 @@
 2002-08-20  Thomas Koeller  <thomas@koeller.dyndns.org>
+
+    	* cdl/redboot.cdl:
+    	* include/redboot.h:
+    	* src/main.c:
+    	* src/flash.c:
+    	* src/decompress.c: Use a common buffer for FIS directory
+    	manipulation and zlib workspace to conserve RAM.
+
+2002-08-20  Thomas Koeller  <thomas@koeller.dyndns.org>
  
      	* cdl/redboot.cdl:
  	* include/fis.h: Allow control of FIS descriptor padding.
